<resources>
    <string name="app_name">天気情報</string>
    <string name="c">あなたの文字列の値</string>
    <string name="temperature_label">気温: %1$s °C</string>
    <string name="feels_like_label">体感気温: %1$s °C</string>
    <string name="pressure_label">気圧: %1$s hPa</string>
    <string name="humidity_label">湿度: %1$s %%</string>
    <string name="weather_label">天気: %1$s</string>
    <string name="wind_speed_label">風速: %1$s m/s</string>
    <string name="wind_direction_label">風向: %1$s</string>
    <string name="gust_speed_label">瞬間風速: %1$s m/s</string>
    <string name="precipitation_probability_label">降水確率: %1$s %%</string>
    <string name="snowfall_label">積雪量(直近3時間): %1$s cm</string>
    <string name="forecast_time_label">予測時刻: %1$s</string>
    <string name="button_show_weather">選択都市の天気情報</string>

    <string-array name="prefecture_names">

        <item>北海道(札幌)</item>
        <item>青森</item>
        <item>岩手(盛岡)</item>
        <item>宮城(仙台)</item>
        <item>秋田</item>
        <item>山形</item>
        <item>福島</item>
        <item>茨城(水戸)</item>
        <item>栃木(宇都宮)</item>
        <item>群馬(前橋)</item>
        <item>埼玉(さいたま)</item>
        <item>千葉</item>
        <item>東京</item>
        <item>神奈川(横浜)</item>
        <item>新潟</item>
        <item>富山</item>
        <item>石川(金沢)</item>
        <item>福井</item>
        <item>山梨(甲府)</item>
        <item>長野</item>
        <item>岐阜</item>
        <item>静岡</item>
        <item>愛知(名古屋)</item>
        <item>三重(津)</item>
        <item>滋賀(大津)</item>
        <item>京都</item>
        <item>大阪</item>
        <item>兵庫</item>
        <item>奈良</item>
        <item>和歌山</item>
        <item>鳥取</item>
        <item>島根(松江)</item>
        <item>岡山</item>
        <item>広島</item>
        <item>山口</item>
        <item>徳島</item>
        <item>香川(高松)</item>
        <item>愛媛(松山)</item>
        <item>高知</item>
        <item>福岡</item>
        <item>佐賀</item>
        <item>長崎</item>
        <item>熊本</item>
        <item>大分</item>
        <item>宮崎</item>
        <item>鹿児島</item>
        <item>沖縄(那覇)</item>
    </string-array>
</resources>